// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`2023 season > after the super bowl > matches the committed leaderboards > 4-after the super bowl / Every Damn Sunday! / as seen by Player 1 1`] = `
[
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 2 = -2",
        "s:20~l:28~e:401547398": "home 4 = -4",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 5 = -5",
        "s:20~l:28~e:401547401": "home 4 = -4",
        "s:20~l:28~e:401547402": "away 3 = 3",
        "s:20~l:28~e:401547403": "home 3 = 3",
        "s:20~l:28~e:401547404": "away 3 = 3",
        "s:20~l:28~e:401547405": "away 2 = 2",
        "s:20~l:28~e:401547406": "home 5 = 5",
        "s:20~l:28~e:401547407": "home 1 = -1",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 3 = 3",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "away 5 = -5",
        "s:20~l:28~e:401547750": "home 5 = 5",
        "s:20~l:28~e:401547751": "home 5 x2 = 10",
        "s:20~l:28~e:401547752": "home 5 = -5",
        "s:20~l:28~e:401547753": "home 5 = 5",
        "s:20~l:28~e:401547754": "away 5 = -5",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "home 5 x2 bonus = 12",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CIN BAL CLE PIT = 0",
      "AFC South": "JAX TEN IND HOU = 1",
      "AFC West": "KC LAC DEN LV = 8",
      "NFC East": "PHI DAL NYG WSH = 2",
      "NFC North": "DET MIN GB CHI = 8",
      "NFC South": "NO ATL CAR TB = 0",
      "NFC West": "SF SEA LAR ARI = 8",
    },
    "name": "Player 19",
    "points": {
      "all": 648,
      "bets": 593,
      "divBets": 35,
      "sbBet": 20,
    },
    "sbBet": {
      "points": 20,
      "team": "KC",
    },
    "weeks": {
      "2023-2-01": 1,
      "2023-2-02": 27,
      "2023-2-03": 31,
      "2023-2-04": 35,
      "2023-2-05": 27,
      "2023-2-06": 43,
      "2023-2-07": 6,
      "2023-2-08": 27,
      "2023-2-09": 55,
      "2023-2-10": 23,
      "2023-2-11": 38,
      "2023-2-12": 46,
      "2023-2-13": 36,
      "2023-2-14": 4,
      "2023-2-15": 42,
      "2023-2-16": 35,
      "2023-2-17": 49,
      "2023-2-18": 36,
      "2023-3-01": 5,
      "2023-3-02": 15,
      "2023-3-03": 0,
      "2023-3-05": 12,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "away 1 bonus = 2",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "away 1 = 1",
        "s:20~l:28~e:401547401": "home 5 = -5",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 5 = 5",
        "s:20~l:28~e:401547407": "away 5 = 5",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "home 5 bonus = 6",
        "s:20~l:28~e:401547750": "home 5 = 5",
        "s:20~l:28~e:401547751": "home 5 = 5",
        "s:20~l:28~e:401547752": "home 5 x2 = -5",
        "s:20~l:28~e:401547753": "home 5 = 5",
        "s:20~l:28~e:401547754": "away 5 = -5",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "away 5 = -5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CLE BAL CIN PIT = 0",
      "AFC South": "JAX TEN HOU IND = 0",
      "AFC West": "KC LAC DEN LV = 8",
      "NFC East": "PHI DAL WSH NYG = 0",
      "NFC North": "DET GB MIN CHI = 15",
      "NFC South": "ATL NO TB CAR = 2",
      "NFC West": "SF SEA LAR ARI = 8",
    },
    "name": "Player 20",
    "points": {
      "all": 515,
      "bets": 474,
      "divBets": 41,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "PHI",
    },
    "weeks": {
      "2023-2-01": 28,
      "2023-2-02": 32,
      "2023-2-03": 27,
      "2023-2-04": 29,
      "2023-2-05": 4,
      "2023-2-06": 45,
      "2023-2-07": -6,
      "2023-2-08": 25,
      "2023-2-09": 36,
      "2023-2-10": -15,
      "2023-2-11": 46,
      "2023-2-12": 45,
      "2023-2-13": 23,
      "2023-2-14": 12,
      "2023-2-15": 35,
      "2023-2-16": 17,
      "2023-2-17": 48,
      "2023-2-18": 6,
      "2023-3-01": 11,
      "2023-3-02": 26,
      "2023-3-03": 5,
      "2023-3-05": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 1 = -1",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "home 3 = -3",
        "s:20~l:28~e:401547401": "home 5 = -5",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "home 1 = -1",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "away 5 = -5",
        "s:20~l:28~e:401547750": "home 5 = 5",
        "s:20~l:28~e:401547751": "home 5 = 5",
        "s:20~l:28~e:401547752": "home 5 x2 = -5",
        "s:20~l:28~e:401547753": "home 5 = 5",
        "s:20~l:28~e:401547754": "away 5 = -5",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "home 5 x2 bonus = 12",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CIN BAL PIT CLE = 1",
      "AFC South": "JAX TEN IND HOU = 1",
      "AFC West": "KC LAC DEN LV = 8",
      "NFC East": "PHI NYG DAL WSH = 1",
      "NFC North": "DET MIN GB CHI = 8",
      "NFC South": "NO TB ATL CAR = 2",
      "NFC West": "SF LAR SEA ARI = 15",
    },
    "name": "Player 15",
    "points": {
      "all": 480,
      "bets": 416,
      "divBets": 44,
      "sbBet": 20,
    },
    "sbBet": {
      "points": 20,
      "team": "KC",
    },
    "weeks": {
      "2023-2-01": 8,
      "2023-2-02": 40,
      "2023-2-03": 31,
      "2023-2-04": 45,
      "2023-2-05": -1,
      "2023-2-06": 26,
      "2023-2-07": -18,
      "2023-2-08": 18,
      "2023-2-09": 29,
      "2023-2-10": 15,
      "2023-2-11": 38,
      "2023-2-12": 25,
      "2023-2-13": 21,
      "2023-2-14": -29,
      "2023-2-15": 41,
      "2023-2-16": 17,
      "2023-2-17": 45,
      "2023-2-18": 33,
      "2023-3-01": 0,
      "2023-3-02": 15,
      "2023-3-03": 5,
      "2023-3-05": 12,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 2 = -2",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 4 = -4",
        "s:20~l:28~e:401547398": "home 2 = -2",
        "s:20~l:28~e:401547399": "home 1 = 1",
        "s:20~l:28~e:401547400": "home 1 = -1",
        "s:20~l:28~e:401547401": "home 1 = -1",
        "s:20~l:28~e:401547402": "away 3 = 3",
        "s:20~l:28~e:401547403": "away 2 bonus = -2",
        "s:20~l:28~e:401547404": "away 3 = 3",
        "s:20~l:28~e:401547405": "away 2 = 2",
        "s:20~l:28~e:401547406": "home 1 = 1",
        "s:20~l:28~e:401547407": "away 2 = 2",
        "s:20~l:28~e:401547408": "home 4 = -4",
        "s:20~l:28~e:401547409": "home 3 x2 bonus = -3",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "away 5 = -5",
        "s:20~l:28~e:401547750": "home 5 = 5",
        "s:20~l:28~e:401547751": "home 5 x2 = 10",
        "s:20~l:28~e:401547752": "home 5 = -5",
        "s:20~l:28~e:401547753": "home 5 = 5",
        "s:20~l:28~e:401547754": "away 5 = -5",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "away 5 x2 = -5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CIN BAL PIT CLE = 1",
      "AFC South": "JAX TEN HOU IND = 0",
      "AFC West": "KC LAC DEN LV = 8",
      "NFC East": "PHI NYG DAL WSH = 1",
      "NFC North": "DET GB MIN CHI = 15",
      "NFC South": "NO CAR ATL TB = 1",
      "NFC West": "SF SEA LAR ARI = 8",
    },
    "name": "Player 18",
    "points": {
      "all": 469,
      "bets": 427,
      "divBets": 42,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "BUF",
    },
    "weeks": {
      "2023-2-01": -7,
      "2023-2-02": 20,
      "2023-2-03": 38,
      "2023-2-04": 31,
      "2023-2-05": 16,
      "2023-2-06": 30,
      "2023-2-07": 0,
      "2023-2-08": 23,
      "2023-2-09": 24,
      "2023-2-10": 21,
      "2023-2-11": 25,
      "2023-2-12": 49,
      "2023-2-13": 28,
      "2023-2-14": -12,
      "2023-2-15": 19,
      "2023-2-16": 17,
      "2023-2-17": 28,
      "2023-2-18": 35,
      "2023-3-01": 5,
      "2023-3-02": 26,
      "2023-3-03": 16,
      "2023-3-05": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 4 = -4",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 3 = -3",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 3 = -3",
        "s:20~l:28~e:401547401": "away 3 bonus = 4",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 4 = 4",
        "s:20~l:28~e:401547404": "away 4 = 4",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 4 = 4",
        "s:20~l:28~e:401547407": "home 3 = -3",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 4 = 4",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "away 5 = -5",
        "s:20~l:28~e:401547750": "home 5 = 5",
        "s:20~l:28~e:401547751": "home 5 x2 = 10",
        "s:20~l:28~e:401547752": "home 5 = -5",
        "s:20~l:28~e:401547753": "home 3 = 3",
        "s:20~l:28~e:401547754": "home 3 bonus = 4",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "away 5 x2 = -5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CIN BAL PIT CLE = 1",
      "AFC South": "JAX TEN IND HOU = 1",
      "AFC West": "KC LAC DEN LV = 8",
      "NFC East": "PHI DAL NYG WSH = 2",
      "NFC North": "DET MIN GB CHI = 8",
      "NFC South": "NO ATL TB CAR = 1",
      "NFC West": "SF SEA LAR ARI = 8",
    },
    "name": "Player 21",
    "points": {
      "all": 460,
      "bets": 423,
      "divBets": 37,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "CIN",
    },
    "weeks": {
      "2023-2-01": 15,
      "2023-2-02": 49,
      "2023-2-03": 12,
      "2023-2-04": 51,
      "2023-2-05": 15,
      "2023-2-06": 22,
      "2023-2-07": -17,
      "2023-2-08": 37,
      "2023-2-09": 13,
      "2023-2-10": 5,
      "2023-2-11": 39,
      "2023-2-12": 41,
      "2023-2-13": 22,
      "2023-2-14": -10,
      "2023-2-15": 46,
      "2023-2-16": 17,
      "2023-2-17": 19,
      "2023-2-18": 24,
      "2023-3-01": 12,
      "2023-3-02": 15,
      "2023-3-03": 1,
      "2023-3-05": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 x2 = -5",
        "s:20~l:28~e:401547353": "no bet = -1",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 5 = -5",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "away 2 = 2",
        "s:20~l:28~e:401547401": "home 3 = -3",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 3 = 3",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 3 = 3",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "away 2 = 2",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 3 = 3",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "away 5 = -5",
        "s:20~l:28~e:401547750": "away 5 = -5",
        "s:20~l:28~e:401547751": "home 5 = 5",
        "s:20~l:28~e:401547752": "home 5 = -5",
        "s:20~l:28~e:401547753": "home 5 = 5",
        "s:20~l:28~e:401547754": "away 5 x2 = -5",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "away 5 x2 = -5",
      },
    },
    "divBets": {
      "AFC East": "BUF MIA NYJ NE = 15",
      "AFC North": "BAL CLE PIT CIN = 15",
      "AFC South": "HOU JAX IND TEN = 15",
      "AFC West": "KC LV DEN LAC = 15",
      "NFC East": "PHI DAL NYG WSH = 2",
      "NFC North": "DET GB MIN CHI = 15",
      "NFC South": "TB NO ATL CAR = 15",
      "NFC West": "SF LAR SEA ARI = 15",
    },
    "name": "Player 1",
    "points": {
      "all": 411,
      "bets": 284,
      "divBets": 107,
      "sbBet": 20,
    },
    "sbBet": {
      "points": 20,
      "team": "KC",
    },
    "weeks": {
      "2023-2-01": 12,
      "2023-2-02": 26,
      "2023-2-03": 9,
      "2023-2-04": 32,
      "2023-2-05": 14,
      "2023-2-06": 11,
      "2023-2-07": -10,
      "2023-2-08": 20,
      "2023-2-09": 31,
      "2023-2-10": 10,
      "2023-2-11": 34,
      "2023-2-12": 25,
      "2023-2-13": 0,
      "2023-2-14": -23,
      "2023-2-15": 26,
      "2023-2-16": 13,
      "2023-2-17": 37,
      "2023-2-18": 12,
      "2023-3-01": -10,
      "2023-3-02": 15,
      "2023-3-03": 5,
      "2023-3-05": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 2 = -2",
        "s:20~l:28~e:401547399": "home 2 = 2",
        "s:20~l:28~e:401547400": "away 1 = 1",
        "s:20~l:28~e:401547401": "home 3 = -3",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 2 = 2",
        "s:20~l:28~e:401547404": "away 3 = 3",
        "s:20~l:28~e:401547405": "away 3 = 3",
        "s:20~l:28~e:401547406": "away 2 bonus = -2",
        "s:20~l:28~e:401547407": "away 1 = 1",
        "s:20~l:28~e:401547408": "home 3 = -3",
        "s:20~l:28~e:401547409": "away 1 = 1",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "away 5 = -5",
        "s:20~l:28~e:401547750": "away 5 = -5",
        "s:20~l:28~e:401547751": "home 5 = 5",
        "s:20~l:28~e:401547752": "home 5 = -5",
        "s:20~l:28~e:401547753": "home 5 = 5",
        "s:20~l:28~e:401547754": "away 5 x2 = -5",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "away 5 x2 = -5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CIN BAL PIT CLE = 1",
      "AFC South": "JAX TEN IND HOU = 1",
      "AFC West": "KC LAC LV DEN = 7",
      "NFC East": "PHI DAL NYG WSH = 2",
      "NFC North": "MIN DET GB CHI = 1",
      "NFC South": "NO ATL CAR TB = 0",
      "NFC West": "SF SEA ARI LAR = 7",
    },
    "name": "Player 11",
    "points": {
      "all": 357,
      "bets": 330,
      "divBets": 27,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "SF",
    },
    "weeks": {
      "2023-2-01": -2,
      "2023-2-02": 35,
      "2023-2-03": 3,
      "2023-2-04": 45,
      "2023-2-05": -15,
      "2023-2-06": 20,
      "2023-2-07": -14,
      "2023-2-08": 67,
      "2023-2-09": 25,
      "2023-2-10": 5,
      "2023-2-11": 25,
      "2023-2-12": 25,
      "2023-2-13": 25,
      "2023-2-14": 1,
      "2023-2-15": 25,
      "2023-2-16": 0,
      "2023-2-17": 35,
      "2023-2-18": 25,
      "2023-3-01": -10,
      "2023-3-02": 15,
      "2023-3-03": 0,
      "2023-3-05": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "home 3 bonus = 4",
        "s:20~l:28~e:401547353": "home 3 = -3",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 5 = -5",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 3 = -3",
        "s:20~l:28~e:401547401": "home 3 = -3",
        "s:20~l:28~e:401547402": "away 5 x2 = 10",
        "s:20~l:28~e:401547403": "home 2 = 2",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "home 1 bonus = -1",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "home 5 = -5",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "no bet = -1",
        "s:20~l:28~e:401547750": "away 5 = -5",
        "s:20~l:28~e:401547751": "home 5 = 5",
        "s:20~l:28~e:401547752": "home 5 = -5",
        "s:20~l:28~e:401547753": "away 5 bonus = -5",
        "s:20~l:28~e:401547754": "home 5 bonus = 6",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "no bet = -1",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CIN PIT BAL CLE = 0",
      "AFC South": "JAX TEN HOU IND = 0",
      "AFC West": "KC LAC DEN LV = 8",
      "NFC East": "PHI DAL NYG WSH = 2",
      "NFC North": "DET MIN CHI GB = 7",
      "NFC South": "NO ATL CAR TB = 0",
      "NFC West": "SF SEA LAR ARI = 8",
    },
    "name": "Player 2",
    "points": {
      "all": 262,
      "bets": 229,
      "divBets": 33,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "CIN",
    },
    "weeks": {
      "2023-2-01": 7,
      "2023-2-02": 31,
      "2023-2-03": 27,
      "2023-2-04": 23,
      "2023-2-05": 33,
      "2023-2-06": 16,
      "2023-2-07": 1,
      "2023-2-08": 20,
      "2023-2-09": 23,
      "2023-2-10": 16,
      "2023-2-11": 19,
      "2023-2-12": 18,
      "2023-2-13": 8,
      "2023-2-14": 0,
      "2023-2-15": -5,
      "2023-2-16": 4,
      "2023-2-17": 11,
      "2023-2-18": -11,
      "2023-3-01": -5,
      "2023-3-02": -4,
      "2023-3-03": -2,
      "2023-3-05": -1,
    },
  },
]
`;

exports[`2023 season > after the super bowl > matches the committed leaderboards > 4-after the super bowl / Richter Family / as seen by Player 8 1`] = `
[
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "home 2 bonus = 3",
        "s:20~l:28~e:401547353": "home 4 = -4",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 3 = -3",
        "s:20~l:28~e:401547398": "home 3 = -3",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 1 = -1",
        "s:20~l:28~e:401547401": "home 2 = -2",
        "s:20~l:28~e:401547402": "away 4 = 4",
        "s:20~l:28~e:401547403": "home 3 = 3",
        "s:20~l:28~e:401547404": "away 2 = 2",
        "s:20~l:28~e:401547405": "away 3 = 3",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "away 2 = 2",
        "s:20~l:28~e:401547408": "home 3 = -3",
        "s:20~l:28~e:401547409": "away 3 = 3",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "away 3 = -3",
        "s:20~l:28~e:401547750": "home 2 = 2",
        "s:20~l:28~e:401547751": "home 5 x2 = 10",
        "s:20~l:28~e:401547752": "home 5 = -5",
        "s:20~l:28~e:401547753": "home 3 = 3",
        "s:20~l:28~e:401547754": "away 3 = -3",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "home 5 x2 bonus = 12",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CIN BAL PIT CLE = 1",
      "AFC South": "JAX TEN IND HOU = 1",
      "AFC West": "KC LAC DEN LV = 8",
      "NFC East": "DAL PHI NYG WSH = 15",
      "NFC North": "DET MIN GB CHI = 8",
      "NFC South": "NO ATL CAR TB = 0",
      "NFC West": "SF SEA LAR ARI = 8",
    },
    "name": "Player 10",
    "points": {
      "all": 488,
      "bets": 439,
      "divBets": 49,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "DAL",
    },
    "weeks": {
      "2023-2-01": 20,
      "2023-2-02": 28,
      "2023-2-03": 24,
      "2023-2-04": 26,
      "2023-2-05": 16,
      "2023-2-06": 28,
      "2023-2-07": -9,
      "2023-2-08": 26,
      "2023-2-09": 28,
      "2023-2-10": 2,
      "2023-2-11": 27,
      "2023-2-12": 23,
      "2023-2-13": 21,
      "2023-2-14": 6,
      "2023-2-15": 30,
      "2023-2-16": 25,
      "2023-2-17": 42,
      "2023-2-18": 30,
      "2023-3-01": 4,
      "2023-3-02": 25,
      "2023-3-03": 5,
      "2023-3-05": 12,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 1 = -1",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "away 1 = 1",
        "s:20~l:28~e:401547401": "home 5 = -5",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 5 = 5",
        "s:20~l:28~e:401547407": "home 1 bonus = -1",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "home 5 = 5",
        "s:20~l:28~e:401547750": "home 5 = 5",
        "s:20~l:28~e:401547751": "home 5 = 5",
        "s:20~l:28~e:401547752": "home 5 x2 = -5",
        "s:20~l:28~e:401547753": "home 5 = 5",
        "s:20~l:28~e:401547754": "away 5 = -5",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "away 5 x2 = -5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CLE BAL CIN PIT = 0",
      "AFC South": "JAX TEN HOU IND = 0",
      "AFC West": "KC LAC DEN LV = 8",
      "NFC East": "PHI DAL WSH NYG = 0",
      "NFC North": "DET GB MIN CHI = 15",
      "NFC South": "ATL NO TB CAR = 2",
      "NFC West": "SF SEA LAR ARI = 8",
    },
    "name": "Player 20",
    "points": {
      "all": 469,
      "bets": 428,
      "divBets": 41,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "SF",
    },
    "weeks": {
      "2023-2-01": 19,
      "2023-2-02": 40,
      "2023-2-03": 31,
      "2023-2-04": 29,
      "2023-2-05": 4,
      "2023-2-06": 39,
      "2023-2-07": -3,
      "2023-2-08": 26,
      "2023-2-09": 23,
      "2023-2-10": -3,
      "2023-2-11": 45,
      "2023-2-12": 46,
      "2023-2-13": 19,
      "2023-2-14": -15,
      "2023-2-15": 27,
      "2023-2-16": 13,
      "2023-2-17": 44,
      "2023-2-18": 9,
      "2023-3-01": 10,
      "2023-3-02": 25,
      "2023-3-03": 5,
      "2023-3-05": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 4 = -4",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 3 = -3",
        "s:20~l:28~e:401547398": "home 5 = -5",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 2 = -2",
        "s:20~l:28~e:401547401": "home 2 = -2",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 2 = 2",
        "s:20~l:28~e:401547404": "away 4 = 4",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 2 = 2",
        "s:20~l:28~e:401547407": "away 4 = 4",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 4 = 4",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "home 5 = 5",
        "s:20~l:28~e:401547750": "away 5 = -5",
        "s:20~l:28~e:401547751": "home 5 x2 = 10",
        "s:20~l:28~e:401547752": "away 5 bonus = 6",
        "s:20~l:28~e:401547753": "away 5 bonus = -5",
        "s:20~l:28~e:401547754": "home 5 bonus = 6",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "away 5 x2 = -5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 8",
      "AFC North": "CIN BAL CLE PIT = 0",
      "AFC South": "JAX HOU TEN IND = 0",
      "AFC West": "KC LAC DEN LV = 8",
      "NFC East": "PHI DAL NYG WSH = 2",
      "NFC North": "DET MIN GB CHI = 8",
      "NFC South": "CAR NO ATL TB = 2",
      "NFC West": "SF SEA LAR ARI = 8",
    },
    "name": "Player 8",
    "points": {
      "all": 455,
      "bets": 419,
      "divBets": 36,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "BUF",
    },
    "weeks": {
      "2023-2-01": 8,
      "2023-2-02": 9,
      "2023-2-03": 25,
      "2023-2-04": 55,
      "2023-2-05": 11,
      "2023-2-06": 9,
      "2023-2-07": -7,
      "2023-2-08": 28,
      "2023-2-09": 0,
      "2023-2-10": 4,
      "2023-2-11": 34,
      "2023-2-12": 35,
      "2023-2-13": 30,
      "2023-2-14": 23,
      "2023-2-15": 24,
      "2023-2-16": 33,
      "2023-2-17": 38,
      "2023-2-18": 28,
      "2023-3-01": 17,
      "2023-3-02": 15,
      "2023-3-03": 5,
      "2023-3-05": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 3 = -3",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 2 = -2",
        "s:20~l:28~e:401547398": "home 3 = -3",
        "s:20~l:28~e:401547399": "home 2 = 2",
        "s:20~l:28~e:401547400": "away 3 = 3",
        "s:20~l:28~e:401547401": "away 2 bonus = 3",
        "s:20~l:28~e:401547402": "away 3 = 3",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "home 5 bonus = -5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 4 = 4",
        "s:20~l:28~e:401547407": "away 3 = 3",
        "s:20~l:28~e:401547408": "home 4 = -4",
        "s:20~l:28~e:401547409": "home 1 bonus = -1",
      },
      "2023-3-01": {
        "s:20~l:28~e:401547749": "away 3 = -3",
        "s:20~l:28~e:401547750": "away 5 = -5",
        "s:20~l:28~e:401547751": "home 4 = 4",
        "s:20~l:28~e:401547752": "home 5 x2 = -5",
        "s:20~l:28~e:401547753": "home 3 = 3",
        "s:20~l:28~e:401547754": "away 5 = -5",
      },
      "2023-3-05": {
        "s:20~l:28~e:401547378": "away 5 x2 = -5",
      },
    },
    "divBets": {
      "AFC East": "MIA NE BUF NYJ = 0",
      "AFC North": "BAL CIN CLE PIT = 7",
      "AFC South": "IND JAX HOU TEN = 2",
      "AFC West": "KC DEN LV LAC = 8",
      "NFC East": "NYG PHI WSH DAL = 1",
      "NFC North": "DET CHI GB MIN = 7",
      "NFC South": "ATL TB NO CAR = 1",
      "NFC West": "SF SEA LAR ARI = 8",
    },
    "name": "Player 12",
    "points": {
      "all": 255,
      "bets": 221,
      "divBets": 34,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "SF",
    },
    "weeks": {
      "2023-2-01": 10,
      "2023-2-02": 21,
      "2023-2-03": -2,
      "2023-2-04": 14,
      "2023-2-05": 22,
      "2023-2-06": 0,
      "2023-2-07": -13,
      "2023-2-08": 16,
      "2023-2-09": 10,
      "2023-2-10": 12,
      "2023-2-11": 23,
      "2023-2-12": 20,
      "2023-2-13": 30,
      "2023-2-14": -9,
      "2023-2-15": 23,
      "2023-2-16": 4,
      "2023-2-17": 2,
      "2023-2-18": 22,
      "2023-3-01": -11,
      "2023-3-02": 17,
      "2023-3-03": 15,
      "2023-3-05": -5,
    },
  },
]
`;

exports[`2023 season > after the super bowl > matches the committed leaderboards > 4-after the super bowl / Test Liga / as seen by Player 17 1`] = `
[
  {
    "bets": {},
    "divBets": {},
    "name": "Player 17",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
]
`;

exports[`2023 season > applies the migration chain to an empty database > migrations 1`] = `
[
  "StartSeason20221662130125888",
  "Leagues1662130125999",
  "DivisionBet1662283771287",
  "WeekInteger1662402825392",
  "WeekId1662404323063",
  "Indices1673624598450",
  "Indices21673625077228",
]
`;

exports[`2023 season > before week 1 kickoff > matches the committed leaderboards > 0-before week 1 kickoff / Every Damn Sunday! / as seen by Player 1 1`] = `
[
  {
    "bets": {},
    "divBets": {
      "AFC East": "BUF MIA NYJ NE = 0",
      "AFC North": "BAL CLE PIT CIN = 0",
      "AFC South": "HOU JAX IND TEN = 0",
      "AFC West": "KC LV DEN LAC = 0",
      "NFC East": "PHI DAL NYG WSH = 0",
      "NFC North": "DET GB MIN CHI = 0",
      "NFC South": "TB NO ATL CAR = 0",
      "NFC West": "SF LAR SEA ARI = 0",
    },
    "name": "Player 1",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "KC",
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {},
    "name": "Player 11",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {},
    "name": "Player 15",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {},
    "name": "Player 18",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {},
    "name": "Player 19",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {},
    "name": "Player 2",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {},
    "name": "Player 20",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {},
    "name": "Player 21",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
]
`;

exports[`2023 season > before week 1 kickoff > matches the committed leaderboards > 0-before week 1 kickoff / Richter Family / as seen by Player 8 1`] = `
[
  {
    "bets": {},
    "divBets": {},
    "name": "Player 10",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {},
    "name": "Player 12",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {},
    "name": "Player 20",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
  {
    "bets": {},
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 0",
      "AFC North": "CIN BAL CLE PIT = 0",
      "AFC South": "JAX HOU TEN IND = 0",
      "AFC West": "KC LAC DEN LV = 0",
      "NFC East": "PHI DAL NYG WSH = 0",
      "NFC North": "DET MIN GB CHI = 0",
      "NFC South": "CAR NO ATL TB = 0",
      "NFC West": "SF SEA LAR ARI = 0",
    },
    "name": "Player 8",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "BUF",
    },
    "weeks": {},
  },
]
`;

exports[`2023 season > before week 1 kickoff > matches the committed leaderboards > 0-before week 1 kickoff / Test Liga / as seen by Player 17 1`] = `
[
  {
    "bets": {},
    "divBets": {},
    "name": "Player 17",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
]
`;

exports[`2023 season > super bowl week before kickoff > matches the committed leaderboards > 3-super bowl week before kickoff / Every Damn Sunday! / as seen by Player 1 1`] = `
[
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 2 = -2",
        "s:20~l:28~e:401547398": "home 4 = -4",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 5 = -5",
        "s:20~l:28~e:401547401": "home 4 = -4",
        "s:20~l:28~e:401547402": "away 3 = 3",
        "s:20~l:28~e:401547403": "home 3 = 3",
        "s:20~l:28~e:401547404": "away 3 = 3",
        "s:20~l:28~e:401547405": "away 2 = 2",
        "s:20~l:28~e:401547406": "home 5 = 5",
        "s:20~l:28~e:401547407": "home 1 = -1",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 3 = 3",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CIN BAL CLE PIT = 1",
      "AFC South": "JAX TEN IND HOU = 8",
      "AFC West": "KC LAC DEN LV = 7",
      "NFC East": "PHI DAL NYG WSH = 8",
      "NFC North": "DET MIN GB CHI = 15",
      "NFC South": "NO ATL CAR TB = 0",
      "NFC West": "SF SEA LAR ARI = 15",
    },
    "name": "Player 19",
    "points": {
      "all": 235,
      "bets": 180,
      "divBets": 55,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "KC",
    },
    "weeks": {
      "2023-2-01": 1,
      "2023-2-02": 27,
      "2023-2-03": 31,
      "2023-2-04": 35,
      "2023-2-05": 27,
      "2023-2-06": 43,
      "2023-2-07": 6,
      "2023-2-08": 10,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "away 1 bonus = 2",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "away 1 = 1",
        "s:20~l:28~e:401547401": "home 5 = -5",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 5 = 5",
        "s:20~l:28~e:401547407": "away 5 = 5",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CLE BAL CIN PIT = 0",
      "AFC South": "JAX TEN HOU IND = 7",
      "AFC West": "KC LAC DEN LV = 7",
      "NFC East": "PHI DAL WSH NYG = 15",
      "NFC North": "DET GB MIN CHI = 8",
      "NFC South": "ATL NO TB CAR = 8",
      "NFC West": "SF SEA LAR ARI = 15",
    },
    "name": "Player 20",
    "points": {
      "all": 225,
      "bets": 164,
      "divBets": 61,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "PHI",
    },
    "weeks": {
      "2023-2-01": 28,
      "2023-2-02": 32,
      "2023-2-03": 27,
      "2023-2-04": 29,
      "2023-2-05": 4,
      "2023-2-06": 45,
      "2023-2-07": -6,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 4 = -4",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 3 = -3",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 3 = -3",
        "s:20~l:28~e:401547401": "away 3 bonus = 4",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 4 = 4",
        "s:20~l:28~e:401547404": "away 4 = 4",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 4 = 4",
        "s:20~l:28~e:401547407": "home 3 = -3",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 4 = 4",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CIN BAL PIT CLE = 0",
      "AFC South": "JAX TEN IND HOU = 8",
      "AFC West": "KC LAC DEN LV = 7",
      "NFC East": "PHI DAL NYG WSH = 8",
      "NFC North": "DET MIN GB CHI = 15",
      "NFC South": "NO ATL TB CAR = 1",
      "NFC West": "SF SEA LAR ARI = 15",
    },
    "name": "Player 21",
    "points": {
      "all": 207,
      "bets": 152,
      "divBets": 55,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "CIN",
    },
    "weeks": {
      "2023-2-01": 15,
      "2023-2-02": 49,
      "2023-2-03": 12,
      "2023-2-04": 51,
      "2023-2-05": 15,
      "2023-2-06": 22,
      "2023-2-07": -17,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 1 = -1",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "home 3 = -3",
        "s:20~l:28~e:401547401": "home 5 = -5",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "home 1 = -1",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CIN BAL PIT CLE = 0",
      "AFC South": "JAX TEN IND HOU = 8",
      "AFC West": "KC LAC DEN LV = 7",
      "NFC East": "PHI NYG DAL WSH = 7",
      "NFC North": "DET MIN GB CHI = 15",
      "NFC South": "NO TB ATL CAR = 2",
      "NFC West": "SF LAR SEA ARI = 8",
    },
    "name": "Player 15",
    "points": {
      "all": 184,
      "bets": 136,
      "divBets": 48,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "KC",
    },
    "weeks": {
      "2023-2-01": 8,
      "2023-2-02": 40,
      "2023-2-03": 31,
      "2023-2-04": 45,
      "2023-2-05": -1,
      "2023-2-06": 26,
      "2023-2-07": -18,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "home 3 bonus = 4",
        "s:20~l:28~e:401547353": "home 3 = -3",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 5 = -5",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 3 = -3",
        "s:20~l:28~e:401547401": "home 3 = -3",
        "s:20~l:28~e:401547402": "away 5 x2 = 10",
        "s:20~l:28~e:401547403": "home 2 = 2",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "home 1 bonus = -1",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "home 5 = -5",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CIN PIT BAL CLE = 1",
      "AFC South": "JAX TEN HOU IND = 7",
      "AFC West": "KC LAC DEN LV = 7",
      "NFC East": "PHI DAL NYG WSH = 8",
      "NFC North": "DET MIN CHI GB = 8",
      "NFC South": "NO ATL CAR TB = 0",
      "NFC West": "SF SEA LAR ARI = 15",
    },
    "name": "Player 2",
    "points": {
      "all": 184,
      "bets": 137,
      "divBets": 47,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "CIN",
    },
    "weeks": {
      "2023-2-01": 7,
      "2023-2-02": 31,
      "2023-2-03": 27,
      "2023-2-04": 23,
      "2023-2-05": 33,
      "2023-2-06": 16,
      "2023-2-07": 1,
      "2023-2-08": -1,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 2 = -2",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 4 = -4",
        "s:20~l:28~e:401547398": "home 2 = -2",
        "s:20~l:28~e:401547399": "home 1 = 1",
        "s:20~l:28~e:401547400": "home 1 = -1",
        "s:20~l:28~e:401547401": "home 1 = -1",
        "s:20~l:28~e:401547402": "away 3 = 3",
        "s:20~l:28~e:401547403": "away 2 bonus = -2",
        "s:20~l:28~e:401547404": "away 3 = 3",
        "s:20~l:28~e:401547405": "away 2 = 2",
        "s:20~l:28~e:401547406": "home 1 = 1",
        "s:20~l:28~e:401547407": "away 2 = 2",
        "s:20~l:28~e:401547408": "home 4 = -4",
        "s:20~l:28~e:401547409": "home 3 x2 bonus = -3",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CIN BAL PIT CLE = 0",
      "AFC South": "JAX TEN HOU IND = 7",
      "AFC West": "KC LAC DEN LV = 7",
      "NFC East": "PHI NYG DAL WSH = 7",
      "NFC North": "DET GB MIN CHI = 8",
      "NFC South": "NO CAR ATL TB = 0",
      "NFC West": "SF SEA LAR ARI = 15",
    },
    "name": "Player 18",
    "points": {
      "all": 178,
      "bets": 133,
      "divBets": 45,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "BUF",
    },
    "weeks": {
      "2023-2-01": -7,
      "2023-2-02": 20,
      "2023-2-03": 38,
      "2023-2-04": 31,
      "2023-2-05": 16,
      "2023-2-06": 30,
      "2023-2-07": 0,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 x2 = -5",
        "s:20~l:28~e:401547353": "no bet = -1",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 5 = -5",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "away 2 = 2",
        "s:20~l:28~e:401547401": "home 3 = -3",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 3 = 3",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 3 = 3",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "away 2 = 2",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 3 = 3",
      },
    },
    "divBets": {
      "AFC East": "BUF MIA NYJ NE = 2",
      "AFC North": "BAL CLE PIT CIN = 8",
      "AFC South": "HOU JAX IND TEN = 2",
      "AFC West": "KC LV DEN LAC = 8",
      "NFC East": "PHI DAL NYG WSH = 8",
      "NFC North": "DET GB MIN CHI = 8",
      "NFC South": "TB NO ATL CAR = 1",
      "NFC West": "SF LAR SEA ARI = 8",
    },
    "name": "Player 1",
    "points": {
      "all": 142,
      "bets": 97,
      "divBets": 45,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "KC",
    },
    "weeks": {
      "2023-2-01": 12,
      "2023-2-02": 26,
      "2023-2-03": 9,
      "2023-2-04": 32,
      "2023-2-05": 14,
      "2023-2-06": 11,
      "2023-2-07": -10,
      "2023-2-08": 3,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 2 = -2",
        "s:20~l:28~e:401547399": "home 2 = 2",
        "s:20~l:28~e:401547400": "away 1 = 1",
        "s:20~l:28~e:401547401": "home 3 = -3",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 2 = 2",
        "s:20~l:28~e:401547404": "away 3 = 3",
        "s:20~l:28~e:401547405": "away 3 = 3",
        "s:20~l:28~e:401547406": "away 2 bonus = -2",
        "s:20~l:28~e:401547407": "away 1 = 1",
        "s:20~l:28~e:401547408": "home 3 = -3",
        "s:20~l:28~e:401547409": "away 1 = 1",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CIN BAL PIT CLE = 0",
      "AFC South": "JAX TEN IND HOU = 8",
      "AFC West": "KC LAC LV DEN = 8",
      "NFC East": "PHI DAL NYG WSH = 8",
      "NFC North": "MIN DET GB CHI = 2",
      "NFC South": "NO ATL CAR TB = 0",
      "NFC West": "SF SEA ARI LAR = 8",
    },
    "name": "Player 11",
    "points": {
      "all": 112,
      "bets": 77,
      "divBets": 35,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "SF",
    },
    "weeks": {
      "2023-2-01": -2,
      "2023-2-02": 35,
      "2023-2-03": 3,
      "2023-2-04": 45,
      "2023-2-05": -15,
      "2023-2-06": 20,
      "2023-2-07": -14,
      "2023-2-08": 5,
    },
  },
]
`;

exports[`2023 season > super bowl week before kickoff > matches the committed leaderboards > 3-super bowl week before kickoff / Richter Family / as seen by Player 8 1`] = `
[
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 1 = -1",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "away 1 = 1",
        "s:20~l:28~e:401547401": "home 5 = -5",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 5 = 5",
        "s:20~l:28~e:401547407": "home 1 bonus = -1",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CLE BAL CIN PIT = 0",
      "AFC South": "JAX TEN HOU IND = 7",
      "AFC West": "KC LAC DEN LV = 7",
      "NFC East": "PHI DAL WSH NYG = 15",
      "NFC North": "DET GB MIN CHI = 8",
      "NFC South": "ATL NO TB CAR = 8",
      "NFC West": "SF SEA LAR ARI = 15",
    },
    "name": "Player 20",
    "points": {
      "all": 225,
      "bets": 164,
      "divBets": 61,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "SF",
    },
    "weeks": {
      "2023-2-01": 19,
      "2023-2-02": 40,
      "2023-2-03": 31,
      "2023-2-04": 29,
      "2023-2-05": 4,
      "2023-2-06": 39,
      "2023-2-07": -3,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "home 2 bonus = 3",
        "s:20~l:28~e:401547353": "home 4 = -4",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 3 = -3",
        "s:20~l:28~e:401547398": "home 3 = -3",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 1 = -1",
        "s:20~l:28~e:401547401": "home 2 = -2",
        "s:20~l:28~e:401547402": "away 4 = 4",
        "s:20~l:28~e:401547403": "home 3 = 3",
        "s:20~l:28~e:401547404": "away 2 = 2",
        "s:20~l:28~e:401547405": "away 3 = 3",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "away 2 = 2",
        "s:20~l:28~e:401547408": "home 3 = -3",
        "s:20~l:28~e:401547409": "away 3 = 3",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CIN BAL PIT CLE = 0",
      "AFC South": "JAX TEN IND HOU = 8",
      "AFC West": "KC LAC DEN LV = 7",
      "NFC East": "DAL PHI NYG WSH = 0",
      "NFC North": "DET MIN GB CHI = 15",
      "NFC South": "NO ATL CAR TB = 0",
      "NFC West": "SF SEA LAR ARI = 15",
    },
    "name": "Player 10",
    "points": {
      "all": 182,
      "bets": 136,
      "divBets": 46,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "DAL",
    },
    "weeks": {
      "2023-2-01": 20,
      "2023-2-02": 28,
      "2023-2-03": 24,
      "2023-2-04": 26,
      "2023-2-05": 16,
      "2023-2-06": 28,
      "2023-2-07": -9,
      "2023-2-08": 3,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 4 = -4",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 3 = -3",
        "s:20~l:28~e:401547398": "home 5 = -5",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 2 = -2",
        "s:20~l:28~e:401547401": "home 2 = -2",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 2 = 2",
        "s:20~l:28~e:401547404": "away 4 = 4",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 2 = 2",
        "s:20~l:28~e:401547407": "away 4 = 4",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 4 = 4",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 1",
      "AFC North": "CIN BAL CLE PIT = 1",
      "AFC South": "JAX HOU TEN IND = 8",
      "AFC West": "KC LAC DEN LV = 7",
      "NFC East": "PHI DAL NYG WSH = 8",
      "NFC North": "DET MIN GB CHI = 15",
      "NFC South": "CAR NO ATL TB = 0",
      "NFC West": "SF SEA LAR ARI = 15",
    },
    "name": "Player 8",
    "points": {
      "all": 170,
      "bets": 115,
      "divBets": 55,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "BUF",
    },
    "weeks": {
      "2023-2-01": 8,
      "2023-2-02": 9,
      "2023-2-03": 25,
      "2023-2-04": 55,
      "2023-2-05": 11,
      "2023-2-06": 9,
      "2023-2-07": -7,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 3 = -3",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 2 = -2",
        "s:20~l:28~e:401547398": "home 3 = -3",
        "s:20~l:28~e:401547399": "home 2 = 2",
        "s:20~l:28~e:401547400": "away 3 = 3",
        "s:20~l:28~e:401547401": "away 2 bonus = 3",
        "s:20~l:28~e:401547402": "away 3 = 3",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "home 5 bonus = -5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 4 = 4",
        "s:20~l:28~e:401547407": "away 3 = 3",
        "s:20~l:28~e:401547408": "home 4 = -4",
        "s:20~l:28~e:401547409": "home 1 bonus = -1",
      },
    },
    "divBets": {
      "AFC East": "MIA NE BUF NYJ = 7",
      "AFC North": "BAL CIN CLE PIT = 8",
      "AFC South": "IND JAX HOU TEN = 1",
      "AFC West": "KC DEN LV LAC = 7",
      "NFC East": "NYG PHI WSH DAL = 1",
      "NFC North": "DET CHI GB MIN = 8",
      "NFC South": "ATL TB NO CAR = 15",
      "NFC West": "SF SEA LAR ARI = 15",
    },
    "name": "Player 12",
    "points": {
      "all": 111,
      "bets": 49,
      "divBets": 62,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "SF",
    },
    "weeks": {
      "2023-2-01": 10,
      "2023-2-02": 21,
      "2023-2-03": -2,
      "2023-2-04": 14,
      "2023-2-05": 22,
      "2023-2-06": 0,
      "2023-2-07": -13,
      "2023-2-08": -3,
    },
  },
]
`;

exports[`2023 season > super bowl week before kickoff > matches the committed leaderboards > 3-super bowl week before kickoff / Test Liga / as seen by Player 17 1`] = `
[
  {
    "bets": {},
    "divBets": {},
    "name": "Player 17",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
]
`;

exports[`2023 season > week 1 mid-game > matches the committed leaderboards > 1-week 1 mid-game / Every Damn Sunday! / as seen by Player 1 1`] = `
[
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "no bet = -1",
      },
    },
    "divBets": {
      "AFC East": "BUF MIA NYJ NE = 0",
      "AFC North": "BAL CLE PIT CIN = 0",
      "AFC South": "HOU JAX IND TEN = 0",
      "AFC West": "KC LV DEN LAC = 0",
      "NFC East": "PHI DAL NYG WSH = 0",
      "NFC North": "DET GB MIN CHI = 0",
      "NFC South": "TB NO ATL CAR = 0",
      "NFC West": "SF LAR SEA ARI = 0",
    },
    "name": "Player 1",
    "points": {
      "all": -1,
      "bets": -1,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "KC",
    },
    "weeks": {
      "2023-2-01": -1,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 3 = -3",
      },
    },
    "divBets": {},
    "name": "Player 2",
    "points": {
      "all": -3,
      "bets": -3,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -3,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 4 = -4",
      },
    },
    "divBets": {},
    "name": "Player 21",
    "points": {
      "all": -4,
      "bets": -4,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -4,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
      },
    },
    "divBets": {},
    "name": "Player 11",
    "points": {
      "all": -5,
      "bets": -5,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
      },
    },
    "divBets": {},
    "name": "Player 15",
    "points": {
      "all": -5,
      "bets": -5,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 5 = -5",
      },
    },
    "divBets": {},
    "name": "Player 18",
    "points": {
      "all": -5,
      "bets": -5,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 5 = -5",
      },
    },
    "divBets": {},
    "name": "Player 19",
    "points": {
      "all": -5,
      "bets": -5,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 5 = -5",
      },
    },
    "divBets": {},
    "name": "Player 20",
    "points": {
      "all": -5,
      "bets": -5,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -5,
    },
  },
]
`;

exports[`2023 season > week 1 mid-game > matches the committed leaderboards > 1-week 1 mid-game / Richter Family / as seen by Player 8 1`] = `
[
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 4 = -4",
      },
    },
    "divBets": {},
    "name": "Player 10",
    "points": {
      "all": -4,
      "bets": -4,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -4,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
      },
    },
    "divBets": {},
    "name": "Player 12",
    "points": {
      "all": -5,
      "bets": -5,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 5 = -5",
      },
    },
    "divBets": {},
    "name": "Player 20",
    "points": {
      "all": -5,
      "bets": -5,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 0",
      "AFC North": "CIN BAL CLE PIT = 0",
      "AFC South": "JAX HOU TEN IND = 0",
      "AFC West": "KC LAC DEN LV = 0",
      "NFC East": "PHI DAL NYG WSH = 0",
      "NFC North": "DET MIN GB CHI = 0",
      "NFC South": "CAR NO ATL TB = 0",
      "NFC West": "SF SEA LAR ARI = 0",
    },
    "name": "Player 8",
    "points": {
      "all": -5,
      "bets": -5,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "BUF",
    },
    "weeks": {
      "2023-2-01": -5,
    },
  },
]
`;

exports[`2023 season > week 1 mid-game > matches the committed leaderboards > 1-week 1 mid-game / Test Liga / as seen by Player 17 1`] = `
[
  {
    "bets": {},
    "divBets": {},
    "name": "Player 17",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
]
`;

exports[`2023 season > week 7 complete > matches the committed leaderboards > 2-week 7 complete / Every Damn Sunday! / as seen by Player 1 1`] = `
[
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 2 = -2",
        "s:20~l:28~e:401547398": "home 4 = -4",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 5 = -5",
        "s:20~l:28~e:401547401": "home 4 = -4",
        "s:20~l:28~e:401547402": "away 3 = 3",
        "s:20~l:28~e:401547403": "home 3 = 3",
        "s:20~l:28~e:401547404": "away 3 = 3",
        "s:20~l:28~e:401547405": "away 2 = 2",
        "s:20~l:28~e:401547406": "home 5 = 5",
        "s:20~l:28~e:401547407": "home 1 = -1",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 3 = 3",
      },
    },
    "divBets": {},
    "name": "Player 19",
    "points": {
      "all": 180,
      "bets": 180,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": 1,
      "2023-2-02": 27,
      "2023-2-03": 31,
      "2023-2-04": 35,
      "2023-2-05": 27,
      "2023-2-06": 43,
      "2023-2-07": 6,
      "2023-2-08": 10,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "away 1 bonus = 2",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "away 1 = 1",
        "s:20~l:28~e:401547401": "home 5 = -5",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 5 = 5",
        "s:20~l:28~e:401547407": "away 5 = 5",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
    },
    "divBets": {},
    "name": "Player 20",
    "points": {
      "all": 164,
      "bets": 164,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": 28,
      "2023-2-02": 32,
      "2023-2-03": 27,
      "2023-2-04": 29,
      "2023-2-05": 4,
      "2023-2-06": 45,
      "2023-2-07": -6,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 4 = -4",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 3 = -3",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 3 = -3",
        "s:20~l:28~e:401547401": "away 3 bonus = 4",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 4 = 4",
        "s:20~l:28~e:401547404": "away 4 = 4",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 4 = 4",
        "s:20~l:28~e:401547407": "home 3 = -3",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 4 = 4",
      },
    },
    "divBets": {},
    "name": "Player 21",
    "points": {
      "all": 152,
      "bets": 152,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": 15,
      "2023-2-02": 49,
      "2023-2-03": 12,
      "2023-2-04": 51,
      "2023-2-05": 15,
      "2023-2-06": 22,
      "2023-2-07": -17,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "home 3 bonus = 4",
        "s:20~l:28~e:401547353": "home 3 = -3",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 5 = -5",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 3 = -3",
        "s:20~l:28~e:401547401": "home 3 = -3",
        "s:20~l:28~e:401547402": "away 5 x2 = 10",
        "s:20~l:28~e:401547403": "home 2 = 2",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "home 1 bonus = -1",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "home 5 = -5",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
    },
    "divBets": {},
    "name": "Player 2",
    "points": {
      "all": 137,
      "bets": 137,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": 7,
      "2023-2-02": 31,
      "2023-2-03": 27,
      "2023-2-04": 23,
      "2023-2-05": 33,
      "2023-2-06": 16,
      "2023-2-07": 1,
      "2023-2-08": -1,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 1 = -1",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "home 3 = -3",
        "s:20~l:28~e:401547401": "home 5 = -5",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "home 1 = -1",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
    },
    "divBets": {},
    "name": "Player 15",
    "points": {
      "all": 136,
      "bets": 136,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": 8,
      "2023-2-02": 40,
      "2023-2-03": 31,
      "2023-2-04": 45,
      "2023-2-05": -1,
      "2023-2-06": 26,
      "2023-2-07": -18,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 2 = -2",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 4 = -4",
        "s:20~l:28~e:401547398": "home 2 = -2",
        "s:20~l:28~e:401547399": "home 1 = 1",
        "s:20~l:28~e:401547400": "home 1 = -1",
        "s:20~l:28~e:401547401": "home 1 = -1",
        "s:20~l:28~e:401547402": "away 3 = 3",
        "s:20~l:28~e:401547403": "away 2 bonus = -2",
        "s:20~l:28~e:401547404": "away 3 = 3",
        "s:20~l:28~e:401547405": "away 2 = 2",
        "s:20~l:28~e:401547406": "home 1 = 1",
        "s:20~l:28~e:401547407": "away 2 = 2",
        "s:20~l:28~e:401547408": "home 4 = -4",
        "s:20~l:28~e:401547409": "home 3 x2 bonus = -3",
      },
    },
    "divBets": {},
    "name": "Player 18",
    "points": {
      "all": 133,
      "bets": 133,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -7,
      "2023-2-02": 20,
      "2023-2-03": 38,
      "2023-2-04": 31,
      "2023-2-05": 16,
      "2023-2-06": 30,
      "2023-2-07": 0,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 x2 = -5",
        "s:20~l:28~e:401547353": "no bet = -1",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 5 = -5",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "away 2 = 2",
        "s:20~l:28~e:401547401": "home 3 = -3",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 3 = 3",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 3 = 3",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "away 2 = 2",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 3 = 3",
      },
    },
    "divBets": {
      "AFC East": "BUF MIA NYJ NE = 0",
      "AFC North": "BAL CLE PIT CIN = 0",
      "AFC South": "HOU JAX IND TEN = 0",
      "AFC West": "KC LV DEN LAC = 0",
      "NFC East": "PHI DAL NYG WSH = 0",
      "NFC North": "DET GB MIN CHI = 0",
      "NFC South": "TB NO ATL CAR = 0",
      "NFC West": "SF LAR SEA ARI = 0",
    },
    "name": "Player 1",
    "points": {
      "all": 97,
      "bets": 97,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "KC",
    },
    "weeks": {
      "2023-2-01": 12,
      "2023-2-02": 26,
      "2023-2-03": 9,
      "2023-2-04": 32,
      "2023-2-05": 14,
      "2023-2-06": 11,
      "2023-2-07": -10,
      "2023-2-08": 3,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 2 = -2",
        "s:20~l:28~e:401547399": "home 2 = 2",
        "s:20~l:28~e:401547400": "away 1 = 1",
        "s:20~l:28~e:401547401": "home 3 = -3",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 2 = 2",
        "s:20~l:28~e:401547404": "away 3 = 3",
        "s:20~l:28~e:401547405": "away 3 = 3",
        "s:20~l:28~e:401547406": "away 2 bonus = -2",
        "s:20~l:28~e:401547407": "away 1 = 1",
        "s:20~l:28~e:401547408": "home 3 = -3",
        "s:20~l:28~e:401547409": "away 1 = 1",
      },
    },
    "divBets": {},
    "name": "Player 11",
    "points": {
      "all": 77,
      "bets": 77,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": -2,
      "2023-2-02": 35,
      "2023-2-03": 3,
      "2023-2-04": 45,
      "2023-2-05": -15,
      "2023-2-06": 20,
      "2023-2-07": -14,
      "2023-2-08": 5,
    },
  },
]
`;

exports[`2023 season > week 7 complete > matches the committed leaderboards > 2-week 7 complete / Richter Family / as seen by Player 8 1`] = `
[
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 5 = -5",
        "s:20~l:28~e:401547353": "home 5 = -5",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 5 = -5",
        "s:20~l:28~e:401547398": "home 1 = -1",
        "s:20~l:28~e:401547399": "home 5 = 5",
        "s:20~l:28~e:401547400": "away 1 = 1",
        "s:20~l:28~e:401547401": "home 5 = -5",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "away 5 = 5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 5 = 5",
        "s:20~l:28~e:401547407": "home 1 bonus = -1",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 5 = 5",
      },
    },
    "divBets": {},
    "name": "Player 20",
    "points": {
      "all": 164,
      "bets": 164,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": 19,
      "2023-2-02": 40,
      "2023-2-03": 31,
      "2023-2-04": 29,
      "2023-2-05": 4,
      "2023-2-06": 39,
      "2023-2-07": -3,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "home 2 bonus = 3",
        "s:20~l:28~e:401547353": "home 4 = -4",
        "s:20~l:28~e:401547396": "home 5 x2 = 10",
        "s:20~l:28~e:401547397": "away 3 = -3",
        "s:20~l:28~e:401547398": "home 3 = -3",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 1 = -1",
        "s:20~l:28~e:401547401": "home 2 = -2",
        "s:20~l:28~e:401547402": "away 4 = 4",
        "s:20~l:28~e:401547403": "home 3 = 3",
        "s:20~l:28~e:401547404": "away 2 = 2",
        "s:20~l:28~e:401547405": "away 3 = 3",
        "s:20~l:28~e:401547406": "home 3 = 3",
        "s:20~l:28~e:401547407": "away 2 = 2",
        "s:20~l:28~e:401547408": "home 3 = -3",
        "s:20~l:28~e:401547409": "away 3 = 3",
      },
    },
    "divBets": {},
    "name": "Player 10",
    "points": {
      "all": 136,
      "bets": 136,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": 20,
      "2023-2-02": 28,
      "2023-2-03": 24,
      "2023-2-04": 26,
      "2023-2-05": 16,
      "2023-2-06": 28,
      "2023-2-07": -9,
      "2023-2-08": 3,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 4 = -4",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 3 = -3",
        "s:20~l:28~e:401547398": "home 5 = -5",
        "s:20~l:28~e:401547399": "home 3 = 3",
        "s:20~l:28~e:401547400": "home 2 = -2",
        "s:20~l:28~e:401547401": "home 2 = -2",
        "s:20~l:28~e:401547402": "away 5 = 5",
        "s:20~l:28~e:401547403": "home 2 = 2",
        "s:20~l:28~e:401547404": "away 4 = 4",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 2 = 2",
        "s:20~l:28~e:401547407": "away 4 = 4",
        "s:20~l:28~e:401547408": "home 5 = -5",
        "s:20~l:28~e:401547409": "away 4 = 4",
      },
    },
    "divBets": {
      "AFC East": "BUF NYJ MIA NE = 0",
      "AFC North": "CIN BAL CLE PIT = 0",
      "AFC South": "JAX HOU TEN IND = 0",
      "AFC West": "KC LAC DEN LV = 0",
      "NFC East": "PHI DAL NYG WSH = 0",
      "NFC North": "DET MIN GB CHI = 0",
      "NFC South": "CAR NO ATL TB = 0",
      "NFC West": "SF SEA LAR ARI = 0",
    },
    "name": "Player 8",
    "points": {
      "all": 115,
      "bets": 115,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": "BUF",
    },
    "weeks": {
      "2023-2-01": 8,
      "2023-2-02": 9,
      "2023-2-03": 25,
      "2023-2-04": 55,
      "2023-2-05": 11,
      "2023-2-06": 9,
      "2023-2-07": -7,
      "2023-2-08": 5,
    },
  },
  {
    "bets": {
      "2023-2-01": {
        "s:20~l:28~e:401547352": "away 3 = -3",
        "s:20~l:28~e:401547353": "home 5 x2 = -5",
        "s:20~l:28~e:401547396": "home 5 = 5",
        "s:20~l:28~e:401547397": "away 2 = -2",
        "s:20~l:28~e:401547398": "home 3 = -3",
        "s:20~l:28~e:401547399": "home 2 = 2",
        "s:20~l:28~e:401547400": "away 3 = 3",
        "s:20~l:28~e:401547401": "away 2 bonus = 3",
        "s:20~l:28~e:401547402": "away 3 = 3",
        "s:20~l:28~e:401547403": "home 5 = 5",
        "s:20~l:28~e:401547404": "home 5 bonus = -5",
        "s:20~l:28~e:401547405": "away 5 = 5",
        "s:20~l:28~e:401547406": "home 4 = 4",
        "s:20~l:28~e:401547407": "away 3 = 3",
        "s:20~l:28~e:401547408": "home 4 = -4",
        "s:20~l:28~e:401547409": "home 1 bonus = -1",
      },
    },
    "divBets": {},
    "name": "Player 12",
    "points": {
      "all": 49,
      "bets": 49,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {
      "2023-2-01": 10,
      "2023-2-02": 21,
      "2023-2-03": -2,
      "2023-2-04": 14,
      "2023-2-05": 22,
      "2023-2-06": 0,
      "2023-2-07": -13,
      "2023-2-08": -3,
    },
  },
]
`;

exports[`2023 season > week 7 complete > matches the committed leaderboards > 2-week 7 complete / Test Liga / as seen by Player 17 1`] = `
[
  {
    "bets": {},
    "divBets": {},
    "name": "Player 17",
    "points": {
      "all": 0,
      "bets": 0,
      "divBets": 0,
      "sbBet": 0,
    },
    "sbBet": {
      "points": 0,
      "team": null,
    },
    "weeks": {},
  },
]
`;
